--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "essaitested",
+  "name": "webhook-only",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "build": "echo 'Pas de build, juste les fonctions Netlify'"
   }
 }
